--- a/project/app/config/_base/doctrine.yml
+++ b/project/app/config/_base/doctrine.yml
@@ -47,6 +47,9 @@ doctrine:
                         type: service
                         id: "doctrine_cache.providers.file_system"
             log_enabled: "%kernel.debug%"
+        dql:
+            string_functions:
+                field: DoctrineExtensions\Query\Mysql\Field
 
 doctrine_cache:
     providers:
