--- a/project/app/config/_base/sonata_admin.yml
+++ b/project/app/config/_base/sonata_admin.yml
@@ -23,3 +23,4 @@ sonata_admin:
                 label: Default
                 items:
                     - project_app.admin.cocktail_admin
+                    - project_app.admin.ingredient_admin
