--- a/project/app/config/_base/routing.yml
+++ b/project/app/config/_base/routing.yml
@@ -1,6 +1,13 @@
+project_index:
+    path: /
+    defaults:
+        _controller: FrameworkBundle:Redirect:redirect
+        route: homepage
+        permanent: true
+
 project_base:
     resource: "@ProjectAppBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /{_locale}
 
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
