--- a/project/composer.json
+++ b/project/composer.json
@@ -11,8 +11,6 @@
         "php": ">=7.0",
         "a2lix/translation-form-bundle": "^2.1",
         "beberlei/DoctrineExtensions": "^1.0",
-        "ciklum/doctrine-extra-bundle": "^0.1",
-        "ciklum/framework-test-bundle": "^0.1",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": ">=1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -21,6 +19,7 @@
         "doctrine/migrations": "dev-master",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/doctrine-behaviors": "~1.0",
+        "php-solution/doctrine-orm-extra-bundle": "^0.2.1",
         "sensio/distribution-bundle": ">=5.0",
         "sensio/framework-extra-bundle": ">=3.0",
         "sonata-project/admin-bundle": ">=3.0",
@@ -57,8 +56,7 @@
         ]
     },
     "config": {
-        "bin-dir": "bin",
-        "secure-http": false
+        "bin-dir": "bin"
     },
     "extra": {
         "symfony-app-dir": "app",
@@ -72,8 +70,5 @@
         "branch-alias": {
             "dev-master": "3.0-dev"
         }
-    },
-    "repositories": [
-        {"type": "composer", "url": "http://st-php.pp.ciklum.com"}
-    ]
+    }
 }
